02a - TreeView and Value Converters

--- a/02 - TreeView and Value Converters/02 - TreeView and Value Converters.csproj
+++ b/02 - TreeView and Value Converters/02 - TreeView and Value Converters.csproj
@@ -120,6 +120,9 @@
     <Resource Include="Images\folder_open.png" />
     <Resource Include="Images\HDD.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="02 - TreeView and Value Converters.gif" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
